--- a/.github/workflows/x86-openwrt-build.yml
+++ b/.github/workflows/x86-openwrt-build.yml
@@ -1,7 +1,7 @@
-name: x86-openwrt-build
+name: Build OpenWrt for N305 x86_64
 
 on:
-  workflow_dispatch:   # 手动触发
+  workflow_dispatch:  # 手动触发
   push:
     branches:
       - main
@@ -15,6 +15,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 释放磁盘空间（非常关键）
+      - name: Free up disk space
+        run: |
+          echo "Cleaning up disk to free space..."
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/lib/jvm || true
+          sudo apt clean
+          df -h
+
       - name: Install build dependencies
         run: |
           sudo apt update
@@ -23,48 +31,69 @@ jobs:
             libncursesw5-dev libssl-dev python3 python3-distutils python3-setuptools \
             python3-pyelftools rsync subversion swig time unzip wget zlib1g-dev
 
-      - name: Clone OpenWrt master (shallow clone)
+      # 克隆 OpenWrt 官方仓库（使用 main 分支）
+      - name: Clone OpenWrt source (main branch)
         run: |
-          echo "开始克隆 OpenWrt 仓库..."
-          export GIT_TRACE=1
-          export GIT_CURL_VERBOSE=1
-          # Shallow clone 减少磁盘占用
+          echo "Cloning OpenWrt main branch..."
           git clone --depth=1 https://github.com/openwrt/openwrt.git
           cd openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-          echo "OpenWrt 源码克隆完成。"
 
-      - name: Add luci-theme-argon and OpenClash
+      # 添加 luci-theme-argon + luci-app-openclash
+      - name: Add luci-theme-argon and luci-app-openclash
         run: |
           cd openwrt
-          echo "添加 luci-theme-argon 和 OpenClash"
-          git clone https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon
-          git clone https://github.com/vernesong/OpenClash.git package/luci-app-openclash
-          ./scripts/feeds install -a
+          echo "Adding luci-theme-argon and luci-app-openclash..."
+          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon || echo "⚠️ Failed to clone luci-theme-argon"
+          git clone --depth=1 https://github.com/vernesong/OpenClash.git package/luci-app-openclash || echo "⚠️ Failed to clone OpenClash"
 
-      - name: Copy custom config
+      # 自定义配置（移除不需要组件，添加中文语言包）
+      - name: Configure for N305 x86_64
         run: |
           cd openwrt
-          echo "复制自定义配置文件"
-          cp ../.openwrt-config/.config .config
+          cat > .config <<'EOF'
+          CONFIG_TARGET_x86=y
+          CONFIG_TARGET_x86_64=y
+          CONFIG_TARGET_x86_64_DEVICE_generic=y
+
+          # Luci & 中文支持
+          CONFIG_PACKAGE_luci=y
+          CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+
+          # 保留主题 argon，移除多余主题
+          CONFIG_PACKAGE_luci-theme-argon=y
+          # 移除默认主题
+          # CONFIG_PACKAGE_luci-theme-bootstrap is not set
+          # CONFIG_PACKAGE_luci-theme-material is not set
+
+          # OpenClash
+          CONFIG_PACKAGE_luci-app-openclash=y
+
+          # 移除无线驱动与 USB 打印
+          # CONFIG_PACKAGE_kmod-ath9k is not set
+          # CONFIG_PACKAGE_kmod-ath10k is not set
+          # CONFIG_PACKAGE_kmod-usb-printer is not set
+
+          EOF
           make defconfig
 
-      - name: Clean temporary files to save space
+      # 清理缓存目录
+      - name: Clean unnecessary directories
         run: |
           cd openwrt
-          echo "清理临时文件和缓存"
-          rm -rf /tmp/*
-          rm -rf dl/* build_dir/toolchain/*
+          rm -rf dl/* tmp/* build_dir/toolchain*
 
-      - name: Build firmware (limited parallel jobs)
+      # 编译（限制并行任务）
+      - name: Build OpenWrt firmware
         run: |
           cd openwrt
-          echo "开始编译固件，限制并行任务为2"
+          echo "Starting firmware build..."
           make -j2 V=s
 
-      - name: Upload firmware artifact
+      # 上传编译结果
+      - name: Upload firmware
         uses: actions/upload-artifact@v4
         with:
-          name: openwrt-n305-firmware
+          name: openwrt-n305-x86_64
           path: openwrt/bin/targets/x86/64/
