--- a/.github/workflows/x86-openwrt-build.yml
+++ b/.github/workflows/x86-openwrt-build.yml
@@ -1,99 +1,106 @@
-name: Build OpenWrt for N305 x86_64
+name: Build OpenWrt x86-64 Custom
 
 on:
-  workflow_dispatch:  # 手动触发
-  push:
-    branches:
-      - main
-      - master
+  workflow_dispatch:
+    inputs:
+      OPENWRT_BRANCH:
+        description: "选择 OpenWrt 分支（默认 master）"
+        required: false
+        default: "master"
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 释放磁盘空间（非常关键）
-      - name: Free up disk space
+      - name: Clean up disk space
         run: |
-          echo "Cleaning up disk to free space..."
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/lib/jvm || true
-          sudo apt clean
+          echo "🧹 Cleaning up disk space..."
+          sudo rm -rf /usr/share/dotnet /opt/ghc /opt/hostedtoolcache /usr/local/lib/android
+          sudo apt-get clean
           df -h
 
-      - name: Install build dependencies
+      - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y build-essential ccache ecj fastjar file g++ gawk \
-            gettext git java-propose-classpath libelf-dev libncurses5-dev \
-            libncursesw5-dev libssl-dev python3 python3-distutils python3-setuptools \
-            python3-pyelftools rsync subversion swig time unzip wget zlib1g-dev
+          sudo apt-get update
+          sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib \
+            gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
+            file wget
 
-      # 克隆 OpenWrt 官方仓库（使用 main 分支）
-      - name: Clone OpenWrt source (main branch)
+      - name: Clone OpenWrt source
         run: |
-          echo "Cloning OpenWrt main branch..."
-          git clone --depth=1 https://github.com/openwrt/openwrt.git
+          echo "📥 Cloning OpenWrt source..."
+          git clone https://github.com/openwrt/openwrt.git openwrt
           cd openwrt
+          git fetch --all
+          git checkout ${{ github.event.inputs.OPENWRT_BRANCH || 'master' }}
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      # 添加 luci-theme-argon + luci-app-openclash
-      - name: Add luci-theme-argon and luci-app-openclash
+      - name: Add custom packages
+        run: |
+          cd openwrt/package
+          echo "📦 Adding luci-theme-argon and luci-app-openclash..."
+          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git
+          git clone --depth=1 https://github.com/vernesong/OpenClash.git luci-app-openclash
+
+      - name: Configure target and remove unwanted packages
         run: |
           cd openwrt
-          echo "Adding luci-theme-argon and luci-app-openclash..."
-          git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon || echo "⚠️ Failed to clone luci-theme-argon"
-          git clone --depth=1 https://github.com/vernesong/OpenClash.git package/luci-app-openclash || echo "⚠️ Failed to clone OpenClash"
+          echo "⚙️ Configuring build for N305 x86_64"
+          rm -f .config
+          cat >> .config <<EOF
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_Generic=y
 
-      # 自定义配置（移除不需要组件，添加中文语言包）
-      - name: Configure for N305 x86_64
-        run: |
-          cd openwrt
-          cat > .config <<'EOF'
-          CONFIG_TARGET_x86=y
-          CONFIG_TARGET_x86_64=y
-          CONFIG_TARGET_x86_64_DEVICE_generic=y
+# Add Argon theme
+CONFIG_PACKAGE_luci-theme-argon=y
+# Add OpenClash
+CONFIG_PACKAGE_luci-app-openclash=y
+# Add Chinese language packs
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openclash-zh-cn=y
 
-          # Luci & 中文支持
-          CONFIG_PACKAGE_luci=y
-          CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+# Remove unwanted packages
+CONFIG_PACKAGE_luci-theme-bootstrap=n
+CONFIG_PACKAGE_luci-theme-material=n
+CONFIG_PACKAGE_kmod-ath9k=n
+CONFIG_PACKAGE_kmod-ath10k=n
+CONFIG_PACKAGE_kmod-usb-printer=n
 
-          # 保留主题 argon，移除多余主题
-          CONFIG_PACKAGE_luci-theme-argon=y
-          # 移除默认主题
-          # CONFIG_PACKAGE_luci-theme-bootstrap is not set
-          # CONFIG_PACKAGE_luci-theme-material is not set
+EOF
 
-          # OpenClash
-          CONFIG_PACKAGE_luci-app-openclash=y
-
-          # 移除无线驱动与 USB 打印
-          # CONFIG_PACKAGE_kmod-ath9k is not set
-          # CONFIG_PACKAGE_kmod-ath10k is not set
-          # CONFIG_PACKAGE_kmod-usb-printer is not set
-
-          EOF
           make defconfig
 
-      # 清理缓存目录
-      - name: Clean unnecessary directories
+      - name: Download source packages
         run: |
           cd openwrt
-          rm -rf dl/* tmp/* build_dir/toolchain*
+          echo "⬇️ Downloading all sources..."
+          make download -j8
 
-      # 编译（限制并行任务）
-      - name: Build OpenWrt firmware
+      - name: Build firmware (single thread)
         run: |
           cd openwrt
-          echo "Starting firmware build..."
-          make -j2 V=s
+          echo "🧱 Building OpenWrt firmware (single-thread mode)..."
+          make -j1 V=s 2>&1 | tee build.log
 
-      # 上传编译结果
-      - name: Upload firmware
+      - name: Show build result
+        if: always()
+        run: |
+          cd openwrt
+          echo "📄 Last 50 lines of build log:"
+          tail -n 50 build.log || echo "No build.log found."
+          echo "📁 Firmware files:"
+          find bin/targets/ -type f
+
+      - name: Upload firmware artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: openwrt-n305-x86_64
+          name: openwrt-n305-x86_64-firmware
           path: openwrt/bin/targets/x86/64/
