--- a/.github/workflows/x86-openwrt-build.yml
+++ b/.github/workflows/x86-openwrt-build.yml
@@ -23,8 +23,9 @@ jobs:
           sudo apt-get clean
           df -h
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
+          echo "📦 Installing dependencies..."
           sudo apt-get update
           sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib \
             gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
@@ -33,8 +34,8 @@ jobs:
       - name: Clone OpenWrt source
         run: |
           echo "📥 Cloning OpenWrt source..."
-          git clone https://github.com/openwrt/openwrt.git openwrt
-          cd openwrt
+          git clone https://github.com/openwrt/openwrt.git ${{ github.workspace }}/openwrt
+          cd ${{ github.workspace }}/openwrt
           git fetch --all
           git checkout ${{ github.event.inputs.OPENWRT_BRANCH || 'master' }}
           ./scripts/feeds update -a
@@ -42,14 +43,14 @@ jobs:
 
       - name: Add custom packages
         run: |
-          cd openwrt/package
           echo "📦 Adding luci-theme-argon and luci-app-openclash..."
+          cd ${{ github.workspace }}/openwrt/package
           git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git
           git clone --depth=1 https://github.com/vernesong/OpenClash.git luci-app-openclash
 
       - name: Configure target and remove unwanted packages
         run: |
-          cd openwrt
+          cd ${{ github.workspace }}/openwrt
           echo "⚙️ Configuring build for N305 x86_64"
           rm -f .config
           cat >> .config <<EOF
@@ -73,34 +74,35 @@ jobs:
           CONFIG_PACKAGE_kmod-ath9k=n
           CONFIG_PACKAGE_kmod-ath10k=n
           CONFIG_PACKAGE_kmod-usb-printer=n
-          
           EOF
 
           make defconfig
 
       - name: Download source packages
         run: |
-          cd openwrt
-          echo "⬇️ Downloading all sources..."
+          cd ${{ github.workspace }}/openwrt
+          echo "⬇️ Downloading all source packages..."
           make download -j8
 
       - name: Build firmware (single thread)
         run: |
-          cd openwrt
+          cd ${{ github.workspace }}/openwrt
           echo "🧱 Building OpenWrt firmware (single-thread mode)..."
           make -j1 V=s 2>&1 | tee build.log
 
       - name: Show build result
         if: always()
         run: |
-          cd openwrt
+          cd ${{ github.workspace }}/openwrt
           echo "📄 Last 50 lines of build log:"
           tail -n 50 build.log || echo "No build.log found."
           echo "📁 Firmware files:"
-          find bin/targets/ -type f
+          find bin/targets/ -type f || echo "No firmware files found."
+          df -h
 
       - name: Upload firmware artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: openwrt-n305-x86_64-firmware
-          path: openwrt/bin/targets/x86/64/
+          path: ${{ github.workspace }}/openwrt/bin/targets/x86/64/
