--- a/.github/workflows/x86-openwrt-build.yml
+++ b/.github/workflows/x86-openwrt-build.yml
@@ -28,8 +28,9 @@ jobs:
           echo "📦 Installing dependencies..."
           sudo apt-get update
           sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib \
-            gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
-            file wget
+            gettext git libncurses5-dev libssl-dev python3 rsync unzip zlib1g-dev file wget
+          # 兼容旧 Runner（Ubuntu 22.04），有 distutils 时安装，无则跳过
+          sudo apt-get install -y python3-distutils || true
 
       - name: Clone OpenWrt source
         run: |
@@ -57,7 +58,7 @@ jobs:
           CONFIG_TARGET_x86=y
           CONFIG_TARGET_x86_64=y
           CONFIG_TARGET_x86_64_Generic=y
-          
+
           # Add Argon theme
           CONFIG_PACKAGE_luci-theme-argon=y
           # Add OpenClash
@@ -67,7 +68,7 @@ jobs:
           CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
           CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
           CONFIG_PACKAGE_luci-i18n-openclash-zh-cn=y
-          
+
           # Remove unwanted packages
           CONFIG_PACKAGE_luci-theme-bootstrap=n
           CONFIG_PACKAGE_luci-theme-material=n
