--- a/.github/workflows/x86-openwrt-build.yml
+++ b/.github/workflows/x86-openwrt-build.yml
@@ -1,12 +1,12 @@
 name: Build OpenWrt x86-64 Custom
 
+
 on:
-  workflow_dispatch:
-    inputs:
-      OPENWRT_BRANCH:
-        description: "选择 OpenWrt 分支（默认 master）"
-        required: false
-        default: "master"
+  workflow_dispatch:  # 手动触发
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   build:
@@ -29,7 +29,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib \
             gettext git libncurses5-dev libssl-dev python3 rsync unzip zlib1g-dev file wget
-          # 兼容旧 Runner（Ubuntu 22.04），有 distutils 时安装，无则跳过
           sudo apt-get install -y python3-distutils || true
 
       - name: Clone OpenWrt source
@@ -42,12 +41,24 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: Add custom packages
+      - name: Add custom packages (Argon + OpenClash)
         run: |
           echo "📦 Adding luci-theme-argon and luci-app-openclash..."
           cd ${{ github.workspace }}/openwrt/package
           git clone --depth=1 https://github.com/jerrykuku/luci-theme-argon.git
           git clone --depth=1 https://github.com/vernesong/OpenClash.git luci-app-openclash
+
+      - name: Add OpenClash core (Meta 内核)
+        run: |
+          echo "🔥 Downloading and installing Clash Meta core..."
+          CORE_PATH="${{ github.workspace }}/openwrt/package/luci-app-openclash/root/etc/openclash/core"
+          mkdir -p $CORE_PATH
+          cd $CORE_PATH
+          wget -q https://raw.githubusercontent.com/vernesong/OpenClash/core/master/meta/clash-linux-amd64.tar.gz
+          tar -zxvf clash-linux-amd64.tar.gz
+          rm -f clash-linux-amd64.tar.gz
+          chmod +x clash
+          echo "✅ Clash Meta core added successfully."
 
       - name: Configure target and remove unwanted packages
         run: |
@@ -59,17 +70,13 @@ jobs:
           CONFIG_TARGET_x86_64=y
           CONFIG_TARGET_x86_64_Generic=y
 
-          # Add Argon theme
           CONFIG_PACKAGE_luci-theme-argon=y
-          # Add OpenClash
           CONFIG_PACKAGE_luci-app-openclash=y
-          # Add Chinese language packs
-          CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
-          CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-          CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
           CONFIG_PACKAGE_luci-i18n-openclash-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+          CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 
-          # Remove unwanted packages
           CONFIG_PACKAGE_luci-theme-bootstrap=n
           CONFIG_PACKAGE_luci-theme-material=n
           CONFIG_PACKAGE_kmod-ath9k=n
