--- a/.github/workflows/conf-generate.yml
+++ b/.github/workflows/conf-generate.yml
@@ -15,30 +15,50 @@ jobs:
           path: lede
           # depth: 1 # 深度设为 1 加快克隆速度
     
-      - name: Prepare Feeds and Environment
+      # --- 步骤 1：安装依赖和磁盘清理 ---
+      - name: Install Dependencies and Cleanup Disk
         run: |
-          cd lede
-          
           # 必须先执行 update
           sudo apt update
           
-          # --- 磁盘清理操作：释放空间 ---
+          # 确保安装编译依赖
+          sudo apt install build-essential libncurses5-dev zlib1g-dev gawk git gettext python3 unzip file wget rsync -y
+          
+          echo "Current disk usage before cleanup:"
+          df -h
+          
+          # --- 增强的磁盘清理操作：释放空间 ---
           echo "Cleaning up disk space..."
-          # 移除大型预安装工具
+          # 移除大型预安装工具，例如.NET Core 和 Android SDK
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /usr/local/lib/android
-          # 清理APT缓存
+          
+          # 清理APT缓存和包列表
+          sudo apt-get autoremove --purge -y
           sudo apt-get clean
           sudo rm -rf /var/lib/apt/lists/*
           
-          # 安装编译依赖
-          sudo apt install build-essential libncurses5-dev zlib1g-dev gawk git gettext python3 unzip file wget rsync -y
+          # 清理Docker相关缓存 (如果存在)，|| true 确保即使没有Docker也继续执行
+          sudo docker system prune -a -f || true 
           
-          # 更新并安装 Feeds
+          echo "Disk usage after cleanup:"
+          df -h
+    
+      # --- 步骤 2：准备 OpenWrt 环境和清理残留配置 ---
+      - name: Prepare Feeds and Default Config
+        run: |
+          cd lede
+          
+          # 1. 彻底清除旧的配置和编译残留
+          echo "Removing old configurations and temporary files..."
+          rm -f .config
+          make clean
+          
+          # 2. 更新并安装 Feeds
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           
-          # 准备默认配置，生成一个基础 .config 文件
+          # 3. 准备默认配置，生成一个全新的基础 .config 文件
           make defconfig
     
       # --- !!! 关键步骤：启动 SSH 连接 !!! ---
@@ -49,3 +69,4 @@ jobs:
         if: ${{ always() }} 
         with:
           limit-access-to-actor: true # 限制只有您本人可以连接
+
