--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -31,16 +31,18 @@ jobs:
       - name: 安装编译依赖
         run: |
           sudo apt update -y
-          sudo apt install -y \
-            build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev \
-            libz-dev patch unzip zlib1g-dev lib32gcc-s1 libc6-dev-i386 subversion flex \
-            uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo \
-            libglib2.0-dev xmlto qemu-utils upx python3 python3-pip python3-setuptools \
-            curl wget nano vim
+          sudo apt full-upgrade -y \
+          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gcc-multilib g++-multilib gettext \
+          genisoimage git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev \
+          libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev \
+          libreadline-dev libssl-dev libtool llvm lrzsz libnsl-dev ninja-build p7zip p7zip-full patch pkgconf \
+          python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
+          swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
 
       - name: 克隆 LEDE 源码
         run: |
-          git clone https://github.com/coolsnowwolf/lede.git
+          git clone https://github.com/coolsnowwolf/lede
           cd lede
           ./scripts/feeds update -a
           ./scripts/feeds install -a
