--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -31,8 +31,8 @@ jobs:
       - name: 安装编译依赖
         run: |
           sudo apt update -y
-          sudo apt full-upgrade -y \
-          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          sudo apt install -y \
+          ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
           bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gcc-multilib g++-multilib gettext \
           genisoimage git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev \
           libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev \
