--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -1,11 +1,12 @@
 name: Build LEDE (Manual SSH Config)
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
+    timeout-minutes: 360  # 防止长编译被中断
 
     steps:
       - name: 初始化环境信息
@@ -17,16 +18,14 @@ jobs:
 
       - name: 清理磁盘释放空间
         run: |
-          echo "开始清理磁盘以释放空间..."
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf /usr/local/share/boost
-          sudo rm -rf /usr/local/lib/android
+          echo "开始彻底清理磁盘以释放空间..."
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /usr/local/share/boost /opt/ghc /opt/hostedtoolcache /var/lib/docker /usr/lib/google-cloud-sdk
+          sudo apt-get remove -y '^llvm-.*' '^php.*' '^mongodb-.*' '^mysql-.*' '^postgresql-.*'
+          sudo apt-get autoremove -y --purge
           sudo apt-get clean
-          sudo apt-get autoremove -y
           sudo docker system prune -a -f
-          echo "清理完成。"
           df -h
+          echo "清理完成。"
 
       - name: 安装编译依赖
         run: |
@@ -40,34 +39,34 @@ jobs:
           python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
           swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
 
-      - name: 克隆 LEDE 源码
+      - name: 克隆 LEDE 源码到大空间目录
         run: |
+          cd /home/runner/work
           git clone https://github.com/coolsnowwolf/lede
           cd lede
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: 启动 tmate SSH 会话
+      - name: 启动 tmate SSH 会话（手动配置）
         uses: mxschmitt/action-tmate@v3
         with:
-          limit-access-to-actor: true  # 仅当前GitHub用户可访问
+          limit-access-to-actor: true
         timeout-minutes: 120
 
-      # 当你退出 tmate 后，继续执行以下步骤
-      - name: 保存 .config 并编译固件
+      - name: 编译固件
         run: |
-          cd lede
+          cd /home/runner/work/lede
           if [ ! -f .config ]; then
-            echo "未找到 .config 文件，请确保在 tmate 中运行过 make menuconfig"
+            echo "未找到 .config 文件，请在 tmate 中运行 make menuconfig 后退出"
             exit 1
           fi
           make download -j8
           make -j$(nproc) || make -j1 V=s
-          echo "编译完成，固件输出目录在 bin/targets/"
+          echo "编译完成，固件输出目录："
           du -sh bin/targets/*/* || true
 
       - name: 上传固件产物
         uses: actions/upload-artifact@v4
         with:
           name: lede-firmware
-          path: lede/bin/targets/
+          path: /home/runner/work/lede/bin/targets/
