--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -3,10 +3,13 @@ name: Build LEDE (Manual SSH Config)
 on:
   workflow_dispatch:
 
+env:
+  LEDE_PATH: /home/runner/work/lede  # 定义源码目录环境变量
+
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 360  # 防止长编译被中断
+    timeout-minutes: 360  # 长编译防止被中断
 
     steps:
       - name: 初始化环境信息
@@ -39,11 +42,11 @@ jobs:
           python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
           swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
 
-      - name: 克隆 LEDE 源码到大空间目录
+      - name: 克隆 LEDE 源码
         run: |
-          cd /home/runner/work
-          git clone https://github.com/coolsnowwolf/lede
-          cd lede
+          mkdir -p $LEDE_PATH
+          git clone https://github.com/coolsnowwolf/lede $LEDE_PATH
+          cd $LEDE_PATH
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
@@ -51,11 +54,14 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         with:
           limit-access-to-actor: true
+        run: |
+          cd $LEDE_PATH
         timeout-minutes: 120
 
+      # 当你退出 tmate 后，继续执行以下步骤
       - name: 编译固件
         run: |
-          cd /home/runner/work/lede
+          cd $LEDE_PATH
           if [ ! -f .config ]; then
             echo "未找到 .config 文件，请在 tmate 中运行 make menuconfig 后退出"
             exit 1
@@ -69,4 +75,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: lede-firmware
-          path: /home/runner/work/lede/bin/targets/
+          path: $LEDE_PATH/bin/targets/
