--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -14,65 +14,86 @@ jobs:
     steps:
       - name: 初始化环境信息
         run: |
-          echo "当前磁盘使用情况:"
+          echo "当前磁盘使用情况 (初始状态):"
           df -h
           echo "系统信息:"
           uname -a
-
-      - name: 清理磁盘释放空间
+    
+      # --- 关键修正 1: 激进的磁盘清理，释放更多空间 ---
+      - name: 增强磁盘清理释放空间 (Aggressive Cleanup)
         run: |
-          echo "开始彻底清理磁盘以释放空间..."
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /usr/local/share/boost /opt/ghc /opt/hostedtoolcache /var/lib/docker /usr/lib/google-cloud-sdk
-          sudo apt-get remove -y '^llvm-.*' '^php.*' '^mongodb-.*' '^mysql-.*' '^postgresql-.*'
-          sudo apt-get autoremove -y --purge
+          echo "开始执行激进的磁盘清理..."
+          # 移除大型预安装工具 (dotnet, ghc, android, boost)
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf /usr/local/lib/android
+          
+          # 清理 APT 缓存和旧包
+          sudo apt-get autoremove --purge -y
           sudo apt-get clean
+          sudo rm -rf /var/lib/apt/lists/*
+          
+          # 清理 Docker (占用空间大户)
           sudo docker system prune -a -f
+          
+          # 移除 Swapfile (可额外节省 2-4GB 空间)
+          if [ -f /swapfile ]; then
+            echo "Removing existing swapfile..."
+            sudo swapoff /swapfile || true
+            sudo rm -f /swapfile || true
+          fi
+          
+          echo "清理完成后的磁盘使用情况:"
           df -h
-          echo "清理完成。"
-
+    
+      # --- 关键修正 2: 修正依赖安装格式 (确保所有依赖正确安装) ---
       - name: 安装编译依赖
         run: |
           sudo apt update -y
-          sudo apt install -y \
-          ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gcc-multilib g++-multilib gettext \
-          genisoimage git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev \
-          libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev \
-          libreadline-dev libssl-dev libtool llvm lrzsz libnsl-dev ninja-build p7zip p7zip-full patch pkgconf \
-          python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
-          swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
-
-      - name: 克隆 LEDE 源码
+          # 使用修正后的、完整的依赖列表
+          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+            bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gcc-multilib g++-multilib gettext \
+            genisoimage git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev \
+            libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev \
+            libreadline-dev libssl-dev libtool llvm lrzsz libnsl-dev ninja-build p7zip p7zip-full patch pkgconf \
+            python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
+            swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+    
+      - name: 克隆 LEDE 源码并准备环境
         run: |
-          mkdir -p $LEDE_PATH
-          git clone https://github.com/coolsnowwolf/lede $LEDE_PATH
-          cd $LEDE_PATH
+          # --- 优化: 使用 --depth 1 进行浅克隆，节省空间 ---
+          git clone --depth 1 https://github.com/coolsnowwolf/lede
+          cd lede
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
-      - name: 启动 tmate SSH 会话（手动配置）
+          # 运行 defconfig 生成一个基础 .config 文件
+          make defconfig
+    
+      - name: 启动 tmate SSH 会话
         uses: mxschmitt/action-tmate@v3
         with:
-          limit-access-to-actor: true
-          run: |
-            cd $LEDE_PATH
+          limit-access-to-actor: true  # 仅当前GitHub用户可访问
           timeout-minutes: 120
-
+    
       # 当你退出 tmate 后，继续执行以下步骤
-      - name: 编译固件
+      - name: 保存 .config 并编译固件
         run: |
-          cd $LEDE_PATH
+          cd lede
           if [ ! -f .config ]; then
-            echo "未找到 .config 文件，请在 tmate 中运行 make menuconfig 后退出"
+            echo "未找到 .config 文件，请确保在 tmate 中运行过 make menuconfig 并保存"
             exit 1
           fi
+          echo "开始下载源码..."
           make download -j8
+          echo "开始编译..."
+          # 优先并行编译，失败后切换到单线程详细日志模式
           make -j$(nproc) || make -j1 V=s
-          echo "编译完成，固件输出目录："
+          echo "编译完成，固件输出目录在 bin/targets/"
           du -sh bin/targets/*/* || true
-
+    
       - name: 上传固件产物
         uses: actions/upload-artifact@v4
         with:
           name: lede-firmware
-          path: $LEDE_PATH/bin/targets/
+          path: lede/bin/targets/
