--- a/.github/workflows/config-bulid.yml
+++ b/.github/workflows/config-bulid.yml
@@ -74,7 +74,7 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         with:
           limit-access-to-actor: true  # 仅当前GitHub用户可访问
-          timeout-minutes: 120
+          # 注意: timeout-minutes 参数已被移除，超时由 Job 级别控制
     
       # 当你退出 tmate 后，继续执行以下步骤
       - name: 保存 .config 并编译固件
@@ -97,3 +97,4 @@ jobs:
         with:
           name: lede-firmware
           path: lede/bin/targets/
+      
